Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-3831

[C++] arrow::util::Codec::Decompress() doesn't return decompressed data size

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.11.1
    • 0.12.0
    • C++

    Description

      We can't know decompressed data size when we only have compressed data. The current arrow::util::Codec::Decompress() doesn't return decompressed data size. So we can't know which data in output_buffer can be used.

      FYI: arrow::util::Codec::Compress() returns compressed data size.

      Attachments

        Issue Links

          Activity

            People

              kou Kouhei Sutou
              kou Kouhei Sutou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1.5h
                  1.5h