ARROW-3831: [C++] Add support for returning decompressed size

Author: Kouhei Sutou <kou@clear-code.com>

Closes #3024 from kou/cpp-codec-decompressed-size and squashes the following commits:

9b16e585f <Kouhei Sutou> Update variable name
650ba3080 <Kouhei Sutou> Support output buffer is zero case with zlib
7f8f10ee4 <Kouhei Sutou> Fix variable
644d56518 <Kouhei Sutou>  Add support for returning decompressed size