cpp/src/arrow/util/compression_lz4.h
@@ -31,11 +31,14 @@ namespace util {
 // Lz4 codec.
 class ARROW_EXPORT Lz4Codec : public Codec {
  public:
-  Status Decompress(int64_t input_len, const uint8_t* input, int64_t output_len,
+  Status Decompress(int64_t input_len, const uint8_t* input, int64_t output_buffer_len,
                     uint8_t* output_buffer) override;
 
+  Status Decompress(int64_t input_len, const uint8_t* input, int64_t output_buffer_len,
+                    uint8_t* output_buffer, int64_t* output_len) override;
+
   Status Compress(int64_t input_len, const uint8_t* input, int64_t output_buffer_len,
-                  uint8_t* output_buffer, int64_t* output_length) override;
+                  uint8_t* output_buffer, int64_t* output_len) override;
 
   int64_t MaxCompressedLen(int64_t input_len, const uint8_t* input) override;
 
