cpp/src/arrow/util/compression_zlib.cc
@@ -382,16 +382,20 @@ class GZipCodec::GZipCodecImpl {
     decompressor_initialized_ = false;
   }
 
-  Status Decompress(int64_t input_length, const uint8_t* input, int64_t output_length,
-                    uint8_t* output) {
+  Status Decompress(int64_t input_length, const uint8_t* input,
+                    int64_t output_buffer_length, uint8_t* output,
+                    int64_t* output_length) {
     if (!decompressor_initialized_) {
       RETURN_NOT_OK(InitDecompressor());
     }
-    if (output_length == 0) {
-      // The zlib library does not allow *output to be NULL, even when output_length
-      // is 0 (inflate() will return Z_STREAM_ERROR). We don't consider this an
-      // error, so bail early if no output is expected. Note that we don't signal
-      // an error if the input actually contains compressed data.
+    if (output_buffer_length == 0) {
+      // The zlib library does not allow *output to be NULL, even when
+      // output_buffer_length is 0 (inflate() will return Z_STREAM_ERROR). We don't
+      // consider this an error, so bail early if no output is expected. Note that we
+      // don't signal an error if the input actually contains compressed data.
+      if (output_length) {
+        *output_length = 0;
+      }
       return Status::OK();
     }
 
@@ -413,7 +417,7 @@ class GZipCodec::GZipCodecImpl {
       stream_.next_in = const_cast<Bytef*>(reinterpret_cast<const Bytef*>(input));
       stream_.avail_in = static_cast<uInt>(input_length);
       stream_.next_out = reinterpret_cast<Bytef*>(output);
-      stream_.avail_out = static_cast<uInt>(output_length);
+      stream_.avail_out = static_cast<uInt>(output_buffer_length);
 
       // We know the output size.  In this case, we can use Z_FINISH
       // which is more efficient.
@@ -423,7 +427,7 @@ class GZipCodec::GZipCodecImpl {
       // Failure, buffer was too small
       std::stringstream ss;
       ss << "Too small a buffer passed to GZipCodec. InputLength=" << input_length
-         << " OutputLength=" << output_length;
+         << " OutputLength=" << output_buffer_length;
       return Status::IOError(ss.str());
     }
 
@@ -434,6 +438,11 @@ class GZipCodec::GZipCodecImpl {
       if (stream_.msg != NULL) ss << stream_.msg;
       return Status::IOError(ss.str());
     }
+
+    if (output_length) {
+      *output_length = stream_.total_out;
+    }
+
     return Status::OK();
   }
 
@@ -450,7 +459,7 @@ class GZipCodec::GZipCodecImpl {
   }
 
   Status Compress(int64_t input_length, const uint8_t* input, int64_t output_buffer_len,
-                  uint8_t* output, int64_t* output_length) {
+                  uint8_t* output, int64_t* output_len) {
     if (!compressor_initialized_) {
       RETURN_NOT_OK(InitCompressor());
     }
@@ -478,7 +487,7 @@ class GZipCodec::GZipCodecImpl {
     }
 
     // Actual output length
-    *output_length = output_buffer_len - stream_.avail_out;
+    *output_len = output_buffer_len - stream_.avail_out;
     return Status::OK();
   }
 
@@ -508,7 +517,13 @@ GZipCodec::~GZipCodec() {}
 
 Status GZipCodec::Decompress(int64_t input_length, const uint8_t* input,
                              int64_t output_buffer_len, uint8_t* output) {
-  return impl_->Decompress(input_length, input, output_buffer_len, output);
+  return impl_->Decompress(input_length, input, output_buffer_len, output, nullptr);
+}
+
+Status GZipCodec::Decompress(int64_t input_length, const uint8_t* input,
+                             int64_t output_buffer_len, uint8_t* output,
+                             int64_t* output_len) {
+  return impl_->Decompress(input_length, input, output_buffer_len, output, output_len);
 }
 
 int64_t GZipCodec::MaxCompressedLen(int64_t input_length, const uint8_t* input) {
@@ -517,8 +532,8 @@ int64_t GZipCodec::MaxCompressedLen(int64_t input_length, const uint8_t* input) 
 
 Status GZipCodec::Compress(int64_t input_length, const uint8_t* input,
                            int64_t output_buffer_len, uint8_t* output,
-                           int64_t* output_length) {
-  return impl_->Compress(input_length, input, output_buffer_len, output, output_length);
+                           int64_t* output_len) {
+  return impl_->Compress(input_length, input, output_buffer_len, output, output_len);
 }
 
 Status GZipCodec::MakeCompressor(std::shared_ptr<Compressor>* out) {
